Fix a small UI bug with wrong margins onthe SPAN-Tag solution

--- a/dfgviewer/Resources/Private/Less/components/controls.less
+++ b/dfgviewer/Resources/Private/Less/components/controls.less
@@ -276,7 +276,8 @@
                         transform-origin: center top;
                         .transform(scaleY(0) translateY(-100px));
                         li {
-                            a {
+                            a,
+                            span {
                                 margin: 0;
                                 white-space: nowrap;
                                 padding-right: 5px;
